--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -54,7 +54,8 @@
                             <th>Title</th>
                             <th>Deadline</th>
                             <th>Tags</th>
-                            <th>Setting</th>
+                            <th>Edit</th>
+                            <th>Delete</th>
                           </tr>
                         </thead>
                           <tbody>
@@ -63,7 +64,7 @@
                                        
                                           <% if todo_item.completed? %>
                                          
-                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to incomplete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %><i class="fa fa-check" style="opacity:0.4;"> </i><% end %></td>
+                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to incomplete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %><i class="fa fa-check-square-o fa-lg" style="opacity:0.4;"> </i><% end %></td>
                                               
                                               <% if todo_item.priority=="High" %>
                                                 <td style="vertical-align: middle;opacity:0.4;" width="5%"><button type="button" class="btn btn-danger btn-xs"><strike><%= todo_item.priority %></strike></button></td>
@@ -76,22 +77,13 @@
                                               <td style="vertical-align: middle;opacity:0.4;"><strike><%= todo_item.content %></strike></td> 
                                               <td width="10%" style="vertical-align: middle;opacity:0.4; text-decoration:line-through;"><%= todo_item.deadline %></td> 
                                               <td width="30%" style="vertical-align: middle;opacity:0.4;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
-                                              <td width="5%" style="vertical-align: middle;">
-                                                  <div class="btn-group">
-                                                  <button type="button" class="btn btn-default btn-xs dropdown-toggle" style="opacity:0.4;" data-toggle="dropdown">
-                                                    <i class="fa fa-cog"> </i><span class="caret"></span>
-                                                  </button>
-                                                  <ul class="dropdown-menu" role="menu">
-                                                    <li><%= link_to "Edit", edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'}%></li>
-                                                    <li><%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} %></li>
-                                                  </ul>
-                                                </div>
-                                              </td>
+                                              <td width="5%" style="vertical-align: middle;text-align:center;opacity:0.4;"><%= link_to edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'} do %><i class="fa fa-edit fa-lg" style="opacity:0.4;"> </i><% end%></td>
+                                              <td width="5%" style="vertical-align: middle;text-align:center;opacity:0.4;"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} do %><i class="fa fa-trash fa-lg" style="opacity:0.4;"> </i><% end%></td>
                                       
                                            
                                           <% else %>
                                            
-                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %><i class="fa fa-check"> </i><% end %></td>
+                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %><i class="fa fa-square-o fa-lg"> </i><% end %></td>
                                               
                                               <% if todo_item.priority=="High" %>
                                                 <td style="vertical-align: middle;" width="5%"><button type="button" class="btn btn-danger btn-xs"><%= todo_item.priority %></button></td>
@@ -104,18 +96,9 @@
                                               <td style="vertical-align: middle;"><%= todo_item.content %></td> 
                                               <td width="10%" style="vertical-align: middle;"><%= todo_item.deadline %></td> 
                                               <td width="30%" style="vertical-align: middle;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
-                                              <td width="5%" style="vertical-align: middle">
-                                                  <div class="btn-group">
-                                                  <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                                    <i class="fa fa-cog"> </i><span class="caret"></span>
-                                                  </button>
-                                                  <ul class="dropdown-menu" role="menu">
-                                                    <li><%= link_to "Edit", edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'}%></li>
-                                                    <li><%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} %></li>
-                                                  </ul>
-                                                </div>
-                                              </td>
-                                          
+                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'} do %><i class="fa fa-edit fa-lg" style="opacity:0.4;"> </i><% end%></td>
+                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} do %><i class="fa fa-trash fa-lg" style="opacity:0.4;"> </i><% end%></td>
+
 
                                           <% end %>
               
