--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,13 +54,13 @@
         <nav class="sidebar sidebar-left">
             <h5 class="sidebar-header">Navigation</h5>
             <ul class="nav nav-pills nav-stacked">
-                <li class="<%= 'active' if current_page?(root_path) %>">
+               <li class="<%= current_controller?('indicators') ? 'active' : '' %>">
                     <%= link_to root_path do %><i class="fa fa-bar-chart"></i> indicateurs<% end %>
                 </li>
-                <li class="<%= 'active' if current_page?(documentations_path) %>">
+                <li class="<%= current_controller?('documentations') ? 'active' : '' %>">
                     <%= link_to documentations_path do %><i class="fa fa-book"></i> documentation<% end %>
                 </li>
-                <li class="<%= 'active' if current_page?(todo_lists_path) %>">
+                <li class="<%= current_controller?('todo_lists') ? 'active' : '' %>">
                     <%= link_to todo_lists_path do %><i class="fa fa-tasks"></i> task management<% end %>
                 </li>
             </ul>
