--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,20 +1,49 @@
+<div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel"> Create a Task</h4>
+  </div>
+  <div class="modal-body">
+  
+   <%= form_for([@todo_list, @todo_list.todo_items.build]) do |f| %>
 
-<%= form_for([@todo_list, @todo_list.todo_items.build]) do |f| %>
  	<div  class="row">
-	 	<div class="col-sm-2">
-			<%= f.text_field :content, placeholder: "new Todo", :class=>"form-control" %>
+	 	<div class="col-sm-12">
+	 		<%= f.label :content%><br>
+			<%= f.text_area :content, placeholder: "new Todo", :class=>"form-control" %>
 		</div>
-		<div class="col-sm-2">
+	</div><br>
+	<div  class="row">
+		<div class="col-sm-12">
+			<%= f.label :priority %><br>
 			<%= f.select :priority, options_for_select(["Low", "Medium", "High"]), {}, :class=>"form-control" %>
 		</div>
-		<div id="sandbox-container" class="col-sm-2">
-			<%= f.text_field :deadline, placeholder: "deadline", data:{ provide:'datepicker', date:{format:"dd/mm/yyyy"}}, :class=>"form-control" %>
+	</div><br>
+	<div  class="row">
+		<div id="sandbox-container" class="col-sm-12">
+			<%= f.label :deadline %><br>
+			<%= f.text_field :deadline, placeholder: "deadline", data:{ provide:'datepicker'}, :class=>"form-control" %>
 		</div>
-		<div class="col-sm-2">
-			<%= f.text_field :tag_list, placeholder: "Tags seperated by commas", :class=>"form-control" %>
+	</div><br>
+	<div  class="row">
+		<div class="col-sm-12">
+			<%= f.label :tag_list%><br>
+			<%= f.text_field :tag_list,placeholder: "Tags seperated by commas", :class=>"form-control" %>
 		</div>
-		<div class="col-sm-2">
+	</div><br>
+	<div  class="row">
+		<div class="col-sm-12">
 			<%= f.submit :class=>"btn btn-primary btn-block" %></span>
 		</div>
 	</div>
  <% end %><br>
+</div>         
+ <script type="text/javascript">
+  $(document).ready(function(){
+    $('#sandbox-container input').datepicker({
+        format: "dd/mm/yyyy"
+    });
+  });
+</script>     
+
+
+
