--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -46,7 +46,7 @@
                           <tr>
                             <th>Complete</th>
                             <th>Priority</th>
-                            <th>Title</th>
+                            <th>Task</th>
                             <th>In charge</th>
                             <th>Deadline</th>
                             <th>Edit</th>
