--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -18,7 +18,7 @@
                                     <% @todo_lists.each do |todo_list| %>
                                       <tr>
                                         <td width="5%" style="vertical-align: middle;text-align:center;"><span class="label label-primary" >Active</span></td>
-                                        <td width="25%"><div><h4><%= todo_list.title %></h4><%= todo_list.description %></div></td>
+                                        <td width="25%"><div><h4><%= todo_list.title %></h4><%= todo_list.description %><br><i class="fa fa-tasks"> Tasks : <%=todo_list.todo_items.count.to_i %></i> | <i class="fa fa-group"> Managers: <%= todo_list.todo_items.tag_counts.size %></i></div></td>
                                         <td width="10%" style="vertical-align: middle;text-align:center;"><%= todo_list.created_at.strftime('%v') %></td>
                                         <td width="15%" style="vertical-align: middle;text-align:center;">Completion with :<div class="progress"><div class="progress-bar progress-bar-primary" style="width:<%= (todo_list.todo_items.where.not(completed_at: nil).count.to_f / todo_list.todo_items.count.to_f * 100).to_i rescue 0 %>%"><%= (todo_list.todo_items.where.not(completed_at: nil).count.to_f / todo_list.todo_items.count.to_f * 100).to_i rescue 0 %>%</div></div></td>
                                         <td width="5%" style="vertical-align: middle;text-align:center;"><%= link_to todo_list, :class => "btn btn-primary" do %><i class="fa fa-search"> Show</i><% end %></td>
