--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -30,17 +30,33 @@
        <br>
 
 
+
         <div class="row">
           <div class="col-md-12">
               <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">ALL ACTION PLANS</h3>
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-primary btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+                              <i class="fa fa-bars"> Select a view </i><span class="caret"></span>
+                          </button>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><%= link_to "Current tasks", todo_list_path(@todo_list) %></li>
+                            <%
+=begin
+%><li><%= link_to "To be assessed", todo_list_path(@todo_list, view: "Assess") %></li><%
+=end
+%>
+                            <li><%= link_to "History", todo_list_path(@todo_list, view: "History") %></li>
+                          </ul>
+                      </div>
+                        
                           <div class="actions pull-right">
                                    <%= link_to 'Create a new task',new_todo_list_todo_item_path(@todo_list),{:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-new',:class => "btn btn-primary btn-xs"}  %>
                           </div>
                     </div>
                     
                     <div class="panel-body">
+                     
                        <table id="tasks" class="table table-hover" cellspacing="0" width="100%">
                         <thead>
                           <tr>
@@ -49,6 +65,7 @@
                             <th>Task</th>
                             <th>In charge</th>
                             <th>Deadline</th>
+                            <th>Efficiency</th>
                             <th>Edit</th>
                             <th>Delete</th>
                           </tr>
@@ -71,9 +88,41 @@
 
                                               <td style="vertical-align: middle;opacity:0.4;"><strike><%= todo_item.content %></strike></td> 
                                               <td style="vertical-align: middle;opacity:0.4;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
-                                               <td style="vertical-align: middle;opacity:0.4; text-decoration:line-through;"><%= todo_item.deadline %></td> 
-                                              <td width="5%" style="vertical-align: middle;text-align:center;opacity:0.4;"><%= link_to edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'} do %><i class="fa fa-edit fa-lg" style="opacity:0.4;"> </i><% end%></td>
-                                              <td width="5%" style="vertical-align: middle;text-align:center;opacity:0.4;"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} do %><i class="fa fa-trash fa-lg" style="opacity:0.4;"> </i><% end%></td>
+                                              <td style="vertical-align: middle;opacity:0.4; text-decoration:line-through;"><%= todo_item.deadline %></td> 
+                                               <% if todo_item.efficiency? %>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center;opacity:0.4;"><%= todo_item.efficiency %></td> 
+                                                  <td width="5%" style="vertical-align: middle;text-align:center">
+                                                      <div class="btn-group">
+                                                         <button type="button" class="btn btn-primary btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+                                                          <i class="fa fa-thumbs-up"></i><span class="caret"></span>
+                                                        </button>
+                                                        <ul class="dropdown-menu" role="menu">
+                                                          <li><%= link_to "High", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'High'), method: :patch %></li>
+                                                          <li><%= link_to "Medium", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'Medium'), method: :patch %></li>
+                                                          <li><%= link_to "Low", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'Low'), method: :patch %></li>
+                                                          <li><%= link_to "Cancel", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => nil), method: :patch %></li>
+                                                        </ul>
+                                                      </div>
+                                                </td>
+                                                <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} do %><i class="fa fa-trash fa-lg"> </i><% end%></td>
+                                              <% else %>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center;">
+                                                        <div class="btn-group">
+                                                           <button type="button" class="btn btn-primary btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+                                                            <i class="fa fa-thumbs-up" ></i><span class="caret"></span>
+                                                          </button>
+                                                          <ul class="dropdown-menu" role="menu">
+                                                            <li><%= link_to "High", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'High'), method: :patch %></li>
+                                                             <li><%= link_to "Medium", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'Medium'), method: :patch %></li>
+                                                            <li><%= link_to "Low", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'Low'), method: :patch %></li>
+                                                          </ul>
+                                                        </div>
+                                                  </td>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center;opacity:0.4;"></td>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center;opacity:0.4;"></td>
+                                              <% end %>
+                                              
+                                             
                                       
                                            
                                           <% else %>
@@ -92,10 +141,32 @@
                                               
                                               <td style="vertical-align: middle;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
                                               <td  style="vertical-align: middle;"><%= todo_item.deadline %></td> 
-                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'} do %><i class="fa fa-edit fa-lg" style="opacity:0.4;"> </i><% end%></td>
-                                              <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} do %><i class="fa fa-trash fa-lg" style="opacity:0.4;"> </i><% end%></td>
 
-
+                                              <% if todo_item.efficiency? %>
+                                                   <td width="5%" style="vertical-align: middle;text-align:center;"><%= todo_item.efficiency %></td>
+                                                   <td width="5%" style="vertical-align: middle;text-align:center;">
+                                                        <div class="btn-group">
+                                                           <button type="button" class="btn btn-primary btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+                                                            <i class="fa fa-thumbs-up" ></i><span class="caret"></span>
+                                                          </button>
+                                                          <ul class="dropdown-menu" role="menu">
+                                                            <li><%= link_to "High", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'High'), method: :patch %></li>
+                                                             <li><%= link_to "Medium", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'Medium'), method: :patch %></li>
+                                                            <li><%= link_to "Low", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => 'Low'), method: :patch %></li>
+                                                            <li><%= link_to "Cancel", efficiency_todo_list_todo_item_path(@todo_list, todo_item.id, :efficiency => nil), method: :patch %></li>
+                                                          </ul>
+                                                        </div>
+                                                  </td>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} do %><i class="fa fa-trash fa-lg"> </i><% end%></td>
+                                              <% else %>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center">
+                                                        
+                                                  </td>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'} do %><i class="fa fa-edit fa-lg"> </i><% end%></td>
+                                                  <td width="5%" style="vertical-align: middle;text-align:center"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'} do %><i class="fa fa-trash fa-lg" > </i><% end%></td>
+                                                  <% end %>
+                                                 
+                                                  
                                           <% end %>
               
                                     </tr>
