--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -2,7 +2,7 @@
 	<section id="main-content">
       
           <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-6">
                         <!--breadcrumbs start -->
                         <ul class="breadcrumb">
                             <li><%= link_to 'Todo List', todo_lists_path %>
@@ -10,7 +10,24 @@
                             <li class="active"><%= @todo_list.title %></li>
                         </ul>
                     </div>
-                </div>
+                    <div class="col-md-6">
+                       <div class="btn-group actions pull-right">
+                        <br>
+                          <button type="button" class="btn btn-primary btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+                              <i class="fa fa-bars"> Setting </i><span class="caret"></span>
+                          </button>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><%= link_to "Current tasks", todo_list_path(@todo_list) %></li>
+                            <%
+=begin
+%><li><%= link_to "To be assessed", todo_list_path(@todo_list, view: "Assess") %></li><%
+=end
+%>
+                            <li><%= link_to "History", todo_list_path(@todo_list, view: "History") %></li>
+                          </ul>
+                      </div>
+                    </div>
+        </div>
        
         <div class="row">
           <div class="col-md-12">
@@ -35,21 +52,8 @@
           <div class="col-md-12">
               <div class="panel panel-default">
                     <div class="panel-heading">
-                        <div class="btn-group">
-                          <button type="button" class="btn btn-primary btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
-                              <i class="fa fa-bars"> Select a view </i><span class="caret"></span>
-                          </button>
-                          <ul class="dropdown-menu" role="menu">
-                            <li><%= link_to "Current tasks", todo_list_path(@todo_list) %></li>
-                            <%
-=begin
-%><li><%= link_to "To be assessed", todo_list_path(@todo_list, view: "Assess") %></li><%
-=end
-%>
-                            <li><%= link_to "History", todo_list_path(@todo_list, view: "History") %></li>
-                          </ul>
-                      </div>
-                        
+                       
+                          <h3 class="panel-title">Tasks</h3>
                           <div class="actions pull-right">
                                    <%= link_to 'Create a new task',new_todo_list_todo_item_path(@todo_list),{:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-new',:class => "btn btn-primary btn-xs"}  %>
                           </div>
