--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -2,7 +2,7 @@
 	<section id="main-content">
       
           <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <!--breadcrumbs start -->
                         <ul class="breadcrumb">
                             <li><%= link_to 'Todo List', todo_lists_path %>
@@ -10,11 +10,11 @@
                             <li class="active"><%= @todo_list.title %></li>
                         </ul>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                        <div class="btn-group actions pull-right">
                         <br>
                           <button type="button" class="btn btn-primary btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
-                              <i class="fa fa-bars"> Setting </i><span class="caret"></span>
+                              <i class="fa fa-bars"> Settings </i><span class="caret"></span>
                           </button>
                           <ul class="dropdown-menu" role="menu">
                             <li><%= link_to "Current tasks", todo_list_path(@todo_list) %></li>
