--- a/app/views/indicators/edit.html.erb
+++ b/app/views/indicators/edit.html.erb
@@ -8,7 +8,7 @@
 	                </div>
 	                <div class="dashboard-tile detail tile">
 	                	
-							<%= render 'form' %>
+							<%= render 'indicators/form' %>
 	                	
 	                </div>
 	            </div>		
